Fixed big gap below footer

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
 
 .bg-color {
     background: #373737;
-    min-height: 100vh;
+    /* min-height: 100vh; */
 
 }
 
@@ -120,7 +120,7 @@ body {
     padding-left: 50px;
     border-radius: 20px;
     left: 3%;
-    bottom: 83.5%;
+    bottom: 82%;
     /* top: 20; */
     background-color: #707070B5;
     ;
@@ -135,8 +135,7 @@ body {
     padding-left: 50px;
     border-radius: 20px;
     left: 20%;
-    /* bottom: 85.5%; */
-    top: 24%;
+    top: 26%;
     background-color: #ffff;
     ;
 }
@@ -183,24 +182,8 @@ body {
     /* z-index: -1; */
 }
 
-.product-container {
-    /* border: 1px solid red; */
-    /* width: 1200px; */
-    min-width: min-content;
-    /* height: 200px; */
-    /* margin-bottom: 95px; */
-
-}
-
 .product-container-2 {
-    border: 4px solid #FEE715;
-    width: 1218px;
-    min-width: min-content;
-    height: 250px;
-    margin-top: 0%;
-    /* margin-bottom: 355px; */
-    /* margin-bottom: 200px; */
-
+    border: 3px solid #FEE715;
 }
 
 .image-container {
@@ -209,7 +192,6 @@ body {
     width: 1150px;
     height: 220px;
     justify-content: space-evenly;
-    /* margin-bottom: 50px; */
 }
 
 .image-container img {
@@ -226,15 +208,10 @@ body {
 
 .feet-pics {
     height: 200px;
-    /* margin-bottom:; */
 }
 
 .feet-pics img {
     width: 320px;
-    /* Set width for each image */
-    /* Add margin if needed (optional): */
-    /* margin-right: 10px; */
-    /* Add spacing between images (optional) */
 }
 
 .image-like-container {
